<resources>
    <string name="app_name">FishTheBreak</string>
    <string name="oauth_redirect_host">auth</string>
    <string name="oauth_redirect_uri">authenticate-with-oauth</string>
    <string name="wms_layer_url">https://nowcoast.noaa.gov/geoserver/observations/weather_radar/wms</string>
        <string name="portal_url"></string>
        <string name="map_portal_id"></string>
        <string name="api_key"></string>
    <string name="google_sign_in_key"></string>
    <string name="facebook_app_id"></string>
    <string name="fb_login_protocol_scheme"></string>
    <string name="facebook_client_token"></string>
    <string name="btn_next">Next</string>
    <string name="on_board_1_title">Explore the Great Outdoors: Fishing for Adventure</string>
    <string name="on_board_1_description">Cast your line and reel in the adventure with our fish-catching mobile app</string>
    <string name="on_board_2_title">Get Hooked on Fishing: The Ultimate Fishing Experience</string>
    <string name="on_board_2_description">Cast your line and reel in the adventure with our fish-catching mobile app</string>
    <string name="on_board_3_title">Unleash Your Inner Angler: Master the Art of Fishing</string>
    <string name="on_board_3_description">Cast your line and reel in the adventure with our fish-catching mobile app</string>
    <string name="skip">Skip</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="sign_in_to_fish_the_break">Sign in to Fish the Break</string>
    <string name="log_in_with_your_data_that_you_entered_during_your_registration">Log in with your data that you entered during your registration.</string>
    <string name="email_required">
        <font color="#0F1106">Email </font>
        <font color="#32CEBA">*</font>
    </string>
    <string name="mobile_required">
        <font color="#0F1106">Phone </font>
        <font color="#32CEBA">*</font>
    </string>
    <string name="email">Email</string>
    <string name="mobile">Phone</string>
    <string name="password_required">
        <font color="#0F1106">Password </font>
        <font color="#32CEBA">*</font>
    </string>
    <string name="new_password_required">
        <font color="#0F1106">New Password </font>
        <font color="#32CEBA">*</font>
    </string>
    <string name="current_password_required">
        <font color="#0F1106">Current Password </font>
        <font color="#32CEBA">*</font>
    </string>
    <string name="confirm_password_required">
        <font color="#0F1106">Confirm Password </font>
        <font color="#32CEBA">*</font>
    </string>
    <string name="username_required">
        <font color="#0F1106">Username </font>
        <font color="#32CEBA">*</font>
    </string>
    <string name="full_name_required">
        <font color="#0F1106">Full Name </font>
        <font color="#32CEBA">*</font>
    </string>
    <string name="last_name_required">
        <font color="#0F1106">Last Name </font>
        <font color="#32CEBA">*</font>
    </string>
    <string name="first_name_required">
        <font color="#0F1106">First Name </font>
        <font color="#32CEBA">*</font>
    </string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="password">Password</string>
    <string name="new_password">New Password</string>
    <string name="current_password">Current Password</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="login">Login</string>
    <string name="or_continue_with">or continue with</string>
    <string name="continue_with_google">Continue with Google</string>
    <string name="continue_with_facebook">Continue with Facebook</string>
    <string name="don_t_have_an_account">Don’t have an account?</string>
    <string name="register">Register</string>
    <string name="create_account">Create Account</string>
    <string name="get_the_most_out_of_your_stay_with_a_personalized_experience_by_signing_up_today">Get the most out of your stay with a personalized experience by signing up today.</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="full_name">Full Name</string>
    <string name="username">Username</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="terms_amp_conditions">Terms &amp; conditions</string>
    <string name="accept_to_privacy_policy_and_terms_conditions">
        <font color="#868E96">Accept to </font>
        <font color="#00A5F7">Privacy Policy</font>
        <font color="#868E96">and</font>
        <font color="#00A5F7">Terms &amp; conditions</font>
    </string>
    <string name="account_created_successfully">Account Created Successfully</string>
    <string name="your_profile_has_been_created_please_enter_your_credentials_to_login">Your profile has been created. Let\'s start</string>
    <string name="forgot_password_">Forgot Password</string>
    <string name="enter_the_email_address_associated_with_your_account_and_we_ll_send_you_a_link_to_reset_your_password">Enter the email address associated with your account and we\'ll send you a link to reset your password</string>
    <string name="next">Next</string>
    <string name="enter_otp_code">Enter OTP Code</string>
    <string name="please_enter_the_one_time_password_otp_you_received_on_your_email_to_change_your_password">Please enter the one-time password (OTP) you received on your email to change your password.</string>
    <string name="didn_t_receive_a_code">Didn\'t receive a code?</string>
    <string name="send_again">Send Again</string>
    <string name="continue_">Continue</string>
    <string name="_0">0</string>
    <string name="set_new_password">Set New Password</string>
    <string name="your_new_password_must_be_different_from_previously_used_passwords">Your new password must be different from previously used passwords.</string>
    <string name="your_password_has_been_changed_successfully">Your password has been changed successfully!</string>
    <string name="press_again_to_exit">Press again to exit</string>
    <string name="no_internet">No internet</string>
        <string name="error_email">Please enter email or phone number</string>
    <string name="error_invalid_email">Please enter a valid email address</string>
    <string name="error_invalid_phone">Please enter a valid phone number</string>
    <string name="error_invalid_change_email">Email already exist</string>
    <string name="error_boat_range">Please select boat range</string>
    <string name="error_invalid_username">Please enter valid username.\nUsername only contains numeric, alphanumeric characters and underscore.</string>
    <string name="error_invalid_first_name">Please enter valid first name</string>
    <string name="error_invalid_vessel_name">Please enter vessel name</string>
    <string name="error_invalid_make_name">Please enter vessel make name</string>
    <string name="error_invalid_model_name">Please enter vessel model name</string>
    <string name="error_invalid_year_name">Please enter valid year</string>
    <string name="error_invalid_dock_location">Please enter valid dock location</string>
    <string name="error_invalid_last_name">Please enter valid last name</string>
    <string name="error_country_code">Please enter valid country code</string>
    <string name="error_otp_code">Please enter otp code</string>
    <string name="error_phone">Please enter valid phone number</string>
    <string name="error_password">Please enter your password</string>
    <string name="error_old_password">Please enter your old password</string>
    <string name="error_new_password">Please enter your new password</string>
    <string name="error_invalid_password">Password must contain at least 1 uppercase and lowercase letter, 1 integer, 1 special character, and a minimum length of 8 characters</string>
    <string name="error_login_invalid_password">Please enter your password</string>
    <string name="error_current_password">Please enter your current password</string>
    <string name="error_confirm_password">Please enter confirm password</string>
    <string name="error_confirm_password_match">Confirm password must be match with password</string>
    <string name="error_confirm_password_match_new">Confirm password must be match with new password</string>
    <string name="no_data_found">No data Found</string>
    <string name="error_terms">Please accept the privacy policy and terms &amp; conditions</string>
    <string name="error_location_name">Please enter location name</string>
    <string name="error_map_name">Please enter map name</string>
    <string name="error_map_description">Please enter map description</string>
    <string name="error_save_trolling">Something went wrong</string>
    <string name="error_trolling_name">Please enter trolling name</string>
    <string name="trolling_save_success">Trolling saved successfully</string>
    <string name="error_location_lat">Please enter latitude</string>
    <string name="error_location_lang">Please enter longitude</string>
    <string name="error_location_select_lat">Please select latitude</string>
    <string name="error_location_select_lang">Please select longitude</string>
    <string name="error_vessel_location">Please select vessel location</string>
    <string name="error_location_description">Please enter description</string>
    <string name="error_fish_weight">Please enter fish weight</string>
    <string name="error_fish_length">Please enter fish length</string>
    <string name="error_fish_date">Please enter date</string>
    <string name="error_fish_time">Please enter time</string>
    <string name="toast_error">Error</string>
    <string name="toast_success">Success</string>
    <string name="something_went_wrong">Something went wrong</string>
    <string name="home">Home</string>
    <string name="group">Group</string>
    <string name="fish_log">Fish Log</string>
    <string name="save">Save</string>
    <string name="permission_required">Permission Required</string>
    <string name="open_settings">Open Settings</string>
    <string name="cancel">Cancel</string>
    <string name="dismiss">Dismiss</string>
    <string name="request_for_location">To use FishTheBreak, you need to enable your location sharing so we can show you who\'s around</string>
    <string name="request_for_notification">To use push notification, you need to enable push notification from settings</string>
    <string name="search_fishing_spots">Search fishing spots</string>
    <string name="base_map">Base Map</string>
    <string name="default_map">Default</string>
    <string name="map_layers">Map Layers</string>
    <string name="view_all">View All</string>
    <string name="profile">Profile</string>
    <string name="apply_filters">Apply Filters</string>
    <string name="apply_filter">Apply Filter</string>
    <string name="_0percent">0%</string>
    <string name="latitude_">Latitude</string>
    <string name="longitude_">Longitude</string>
    <string name="all_items">All Items</string>
    <string name="my_items">My Items</string>
    <string name="shared_items">Shared Items</string>
    <string name="back">Back</string>
    <string name="change_layer_opacity">Change Layer Opacity</string>
    <string name="done">Done</string>
    <string name="subscription_membership">Subscription Membership</string>
    <string name="start_free_trial">Start Free Trial</string>
    <string name="don_t_want_to_buy">Don’t want to Buy?</string>
    <string name="subscribe">Subscribe</string>
    <string name="restore_subscribe">Restore Subscribe</string>
    <string name="select_latitude">Select Latitude</string>
    <string name="select_longitude">Select Longitude</string>
    <string name="search_">Search</string>
</resources>