<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/transparent"
        tools:context=".screens.bottom_sheets.PointFilterBottomSheet">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/bg_white_rounded_bottom_sheet"
            android:paddingBottom="@dimen/_14sdp"
            app:layout_constraintTop_toTopOf="parent">

            <View
                android:id="@+id/divider"
                android:layout_width="@dimen/_29sdp"
                android:layout_height="@dimen/_4sdp"
                android:layout_marginTop="@dimen/_7sdp"
                android:background="@drawable/bg_bright_gray_rounded"
                app:layout_constraintCircleRadius="@dimen/_8sdp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/tvTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_14sdp"
                android:layout_marginTop="@dimen/_13sdp"
                android:fontFamily="@font/urbanist_semi_bold"
                android:text="@string/apply_filters"
                android:textColor="@color/secondary700"
                android:textSize="@dimen/_14ssp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/divider" />

            <ImageView
                android:id="@+id/ivCross"
                android:layout_width="@dimen/_33sdp"
                android:layout_height="@dimen/_33sdp"
                android:layout_marginEnd="@dimen/_7sdp"
                android:padding="@dimen/_8sdp"
                android:src="@drawable/ic_cross_gray"
                app:layout_constraintBottom_toBottomOf="@id/tvTitle"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@id/tvTitle" />

            <RadioGroup
                android:id="@+id/radioGroup"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_10sdp"
                android:layout_marginEnd="@dimen/_14sdp"
                android:layout_marginTop="@dimen/_8sdp"
                android:orientation="vertical"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tvTitle">

                <com.google.android.material.radiobutton.MaterialRadioButton
                    android:id="@+id/rbAllItems"
                    style="@style/App_RadioButton.ThemeFilter"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/all_items" />

                <com.google.android.material.radiobutton.MaterialRadioButton
                    android:id="@+id/rbMyItems"
                    style="@style/App_RadioButton.ThemeFilter"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/my_items" />

                <com.google.android.material.radiobutton.MaterialRadioButton
                    android:id="@+id/rbSharedItems"
                    style="@style/App_RadioButton.ThemeFilter"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/shared_items" />

            </RadioGroup>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/buttonAplyFilter"
                style="@style/Widget.App.Button"
                android:layout_width="0dp"
                android:layout_height="@dimen/auth_button_height"
                android:layout_marginHorizontal="@dimen/_14sdp"
                android:layout_marginTop="@dimen/_8sdp"
                android:text="@string/apply_filter"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/radioGroup" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>