<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@android:color/transparent"
        tools:context=".screens.bottom_sheets.LayerOpacityBottomSheet">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/bg_white_rounded_bottom_sheet"
            android:paddingBottom="@dimen/_13sdp"
            app:layout_constraintTop_toTopOf="parent">
            
            <View
                android:id="@+id/divider"
                android:layout_width="@dimen/_30sdp"
                android:layout_height="@dimen/_4sdp"
                android:background="@drawable/bg_bright_gray_rounded"
                android:layout_marginTop="@dimen/_7sdp"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"/>

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/tvTitle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/_14sdp"
                android:layout_marginTop="@dimen/_10sdp"
                android:fontFamily="@font/urbanist_semi_bold"
                android:text="@string/apply_filters"
                android:textColor="@color/secondary700"
                android:textSize="@dimen/_13ssp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/divider" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/tvOpacity"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_14sdp"
                android:layout_marginTop="@dimen/_14sdp"
                android:fontFamily="@font/urbanist_semi_bold"
                android:text="@string/change_layer_opacity"
                android:textColor="@color/secondary800"
                android:textSize="@dimen/_9ssp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tvTitle" />

            <com.google.android.material.slider.Slider
                android:id="@+id/slider"
                style="@style/Widget.App.MySliderOpacity"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_4sdp"
                android:value="0.0"
                android:valueFrom="0.0"
                android:valueTo="100.0"
                app:labelBehavior="gone"
                android:layout_marginStart="@dimen/_5sdp"
                android:layout_marginEnd="@dimen/_1sdp"
                app:layout_constraintEnd_toStartOf="@id/tvOpacityPercent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tvOpacity"
                app:trackHeight="@dimen/_5sdp" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/tvOpacityPercent"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/_14sdp"
                android:fontFamily="@font/urbanist_regular"
                android:text="@string/_0percent"
                android:textColor="@color/secondary500"
                android:textSize="@dimen/_9ssp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@id/slider"
                app:layout_constraintBottom_toBottomOf="@id/slider"/>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/buttonApply"
                style="@style/Widget.App.Button"
                android:layout_width="match_parent"
                android:layout_height="@dimen/auth_button_height"
                android:layout_marginHorizontal="@dimen/_14sdp"
                android:layout_marginTop="@dimen/_16sdp"
                android:text="@string/done"
                app:layout_constraintTop_toBottomOf="@id/slider" />


        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>